[package]
name = "embassy-dht-sensor"
version = "0.1.5"
edition = "2021"
authors = ["Mark Berner"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mark2b/embassy-dht-sensor"
description = "DHT sensor driver for the Embassy async runtime"
readme = "README.md"

[features]
default = ["rp2040", "dht2x"]
rp2040 = ["dep:embassy-rp"]
examples = ["dep:defmt", "dep:defmt-rtt", "dep:panic-probe"]
dht1x = []
dht2x = []

[[example]]
name = "read-dht-sensor-rp"
path = "examples/read-dht-sensor-rp.rs"
required-features = ["rp2040", "examples", "dht2x"]

[lib]
name = "embassy_dht_sensor"
path = "src/lib.rs"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

embassy-executor = { version = "0.8", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.7", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"], optional = true }
defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
panic-probe = { version = "1", features = ["print-defmt"], optional = true }
